Update active status options in new FHIR patient template to use boolean values

--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -608,8 +608,8 @@
                                             <label for="active">Active</label>
                                             <select class="form-control" id="active" name="active" required>
                                                 <option value="" disabled selected>Select</option>
-                                                <option value="yes">Yes</option>
-                                                <option value="no">No</option>
+                                                <option value="True">Yes</option>
+                                                <option value="False">No</option>
                                             </select>
                                         </div>
                                     </div>
