Add prefix input field for contact family name in edit FHIR patient template

--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -396,8 +396,15 @@
                                 value="{{ patient.contact[0].name.family if patient.contact else '' }}">
                         </div>
                     </div>
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="contact_family_name_prefix">Prefix</label>
+                            <input type="text" class="form-control" name="contact_family_name_prefix"
+                                id="contact_family_name_prefix"
+                                value="{{ patient.contact[0].name._family.extension[0].valueString if patient.contact else '' }}">
+                        </div>
+                    </div>
                 </div>
-
                 <div class="row g-2">
                     <div class="col-md">
                         <div class="form-group">
