Update FHIR patient search form placeholders for clarity and examples

--- a/templates/fhir_patient_search.html
+++ b/templates/fhir_patient_search.html
@@ -52,7 +52,7 @@
                 <div id="observation-form" class="form-section" style="display: none;">
                     <div class="form-group">
                         <label for="observation_code">Observation Code</label>
-                        <input type="text" class="form-control" id="observation_code" name="observation_code" placeholder="Enter observation code">
+                        <input type="text" class="form-control" id="observation_code" name="observation_code" placeholder="Enter observation code, e.g., 12345-6">
                     </div>
                     <div class="form-group">
                         <label for="observation_date">Observation Date</label>
@@ -60,21 +60,21 @@
                     </div>
                     <div class="form-group">
                         <label for="observation_value">Observation Value</label>
-                        <input type="text" class="form-control" id="observation_value" name="observation_value" placeholder="Enter observation value">
+                        <input type="text" class="form-control" id="observation_value" name="observation_value" placeholder="Enter observation value, e.g., 98.6">
                     </div>
                 </div>
                 <div id="medication-form" class="form-section" style="display: none;">
                     <div class="form-group">
                         <label for="medication_code">Medication Code</label>
-                        <input type="text" class="form-control" id="medication_code" name="medication_code" placeholder="Enter medication code">
+                        <input type="text" class="form-control" id="medication_code" name="medication_code" placeholder="Enter medication code, e.g., 12345-6">
                     </div>
                     <div class="form-group">
                         <label for="medication_name">Medication Name</label>
-                        <input type="text" class="form-control" id="medication_name" name="medication_name" placeholder="Enter medication name">
+                        <input type="text" class="form-control" id="medication_name" name="medication_name" placeholder="Enter medication name, e.g., Aspirin">
                     </div>
                     <div class="form-group">
                         <label for="medication_form">Medication Form</label>
-                        <input type="text" class="form-control" id="medication_form" name="medication_form" placeholder="Enter medication form">
+                        <input type="text" class="form-control" id="medication_form" name="medication_form" placeholder="Enter medication form, e.g., Tablet">
                     </div>
                 </div>
                 <script>
