--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,15 @@
     <br>
     <div class="">
         <h2>Select HL7 FHIR Patient Information on HAPI</h2>
-        <p>The document found can be edited but note: <span class="bold">These documents belong to other HAPI FHIR
-                users</span></p>
+        <p>The document found can be edited. <span class="bold">Note These documents belong to other HAPI FHIR users</span></p>
         <button onclick="window.location.href='{{ url_for('fhir_patient_list') }}' " class="button" type="button">🔥
             FHIR
             Search Page</button>
     </div>
     <br>
     <div class="">
-        <h2>Search for HL7 FHIR Patient Summary</h2>
-        <p>Search for a FHIR patient summary on HAPI FHIR.</p>
-        <p>Search by name, family, given, birthdate, email, phone, address, city, state, or age.</p>
+        <h2>Search HL7 FHIR Resource Information on HAPI</h2>
+        <p>Search data within resources, on HAPI FHIR. <span class="bold">Note These documents belong to other HAPI FHIR users</span></p>
         <button onclick="window.location.href='{{ url_for('fhir_patient_search') }}'" class="button" type="button">🔍
             FHIR
             Search Page</button>
