--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -412,13 +412,13 @@
                                 <label for="preferred_language">Preferred Language</label>
                                 <select class="form-control" id="preferred_language" name="preferred_language" required>
                                     <option value="" disabled selected>Select</option>
-                                    <option value="english">English</option>
                                     <option value="french">French</option>
-                                    <option value="german">German</option>
-                                    <option value="spanish">Spanish</option>
                                     <option value="italian">Italian</option>
+                                    <option value="spanish">Spanish</option>
                                     <option value="portuguese">Portuguese</option>
                                     <option value="romanian">Romanian</option>
+                                    <option value="german">German</option>
+                                    <option value="english">English</option>
                                     <option value="dutch">Dutch</option>
                                     <option value="swedish">Swedish</option>
                                     <option value="danish">Danish</option>
@@ -440,6 +440,24 @@
                                 </select>
                             </div>
                         </div>
+                        <script>
+                            function updatePreferredLanguageOptions() {
+                                var checkboxes = document.querySelectorAll('input[name="languages"]:checked'); // Get all checked checkboxes
+                                var preferredLanguageSelect = document.getElementById('preferred_language'); // Get the preferred language select element
+                                preferredLanguageSelect.innerHTML = '<option value="" disabled selected>Select</option>'; // Clear the preferred language select element
+
+                                checkboxes.forEach(function(checkbox) {
+                                    var option = document.createElement('option'); // Create a new option element
+                                    option.value = checkbox.value; // Set the option value to the checkbox value
+                                    option.text = checkbox.nextElementSibling.textContent; // Set the option text to the checkbox label text
+                                    preferredLanguageSelect.appendChild(option); // Append the option to the preferred language select element
+                                });
+                            }
+
+                            document.querySelectorAll('input[name="languages"]').forEach(function(checkbox) {
+                                checkbox.addEventListener('change', updatePreferredLanguageOptions); 
+                            });
+                        </script>
 
 
 
