Add JSON data rendering for patient bundles in fhir_patient_bundles.html for improved maintainability

--- a/templates/fhir_patient_bundles.html
+++ b/templates/fhir_patient_bundles.html
@@ -7,7 +7,8 @@
             <h1 class="card-title">Search Results</h1>
             <h2>Result Body Payload</h2>
             <div class="button-inline">
-                <button onclick="window.location.href='{{ url_for('fhir_patient_search') }}'" class="button" type="button">🔍
+                <button onclick="window.location.href='{{ url_for('fhir_patient_search') }}'" class="button"
+                    type="button">🔍
                     FHIR
                     Search Page</button>
             </div>
@@ -15,5 +16,9 @@
         </div>
     </div>
 </div>
+<script>
+    var data = {{ bundle_json|tojson|safe }};
+    document.getElementById("json").innerHTML = JSON.stringify(data, null, 2);
+</script>
 
 {% endblock %}
