Add JSON data rendering for patient information in fhir_patient_summary.html for improved maintainability

--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -81,5 +81,9 @@
         <button class="button" onclick="window.location.href='{{ url_for('fhir_patient_list') }}'">Return</button>
     </div>
 </div>
+<script>
+    var data = {{ patient_json|tojson|safe }};
+    document.getElementById("json").innerHTML = JSON.stringify(data, null, 2);
+</script>
 
 {% endblock %}
