Add JSON data rendering for patient information in fhir_template.html for improved maintainability

--- a/templates/fhir_template.html
+++ b/templates/fhir_template.html
@@ -15,4 +15,10 @@
 
 </div>
 
+<script>
+    var data = {{ patient_json|safe }};
+    document.getElementById("json").innerHTML = JSON.stringify(data, null, 2);
+</script>
+
+
 {% endblock %}
